feat: 카카오 소셜 로그인 구현 #5 (#11)
* feat: 카카오 로그인 API 구현

* feat: OAuth2 방식 카카오 로그인 API 추가

* fix: 카카오 로그인 인가 코드 방식으로 변경

* feat: 소셜 로그인 API 구현 + 템플릿 메소드 및 전략 패턴 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,12 +9,17 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         time_zone: UTC
+oauth:
+  kakao:
+    client-id: ${KAKAO_REST_API_KEY}
+    client-secret: ${KAKAO_CLIENT_SECRET}
+    redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
 jwt:
   secret: ${JWT_SECRET_KEY}
   access-token-expiration: ${JWT_ACCESS_EXPIRATION}
