--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	//swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0' // swagger 1.x 버전은 스프링 2.x 버전과 맞음, 현재는 스프링 3.x를 쓰기에 2.x 사용이 맞음
 
+	//s3
+	implementation 'software.amazon.awssdk:s3:2.20.20' // AWS S3 SDK 의존성
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
