--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         time_zone: UTC
+  jackson:
+    time-zone: Asia/Seoul
   mail:
     host: smtp.gmail.com
     port: 587
