--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,13 +9,11 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
-  jackson:
-    time-zone: Asia/Seoul
   mail:
     host: smtp.gmail.com
     port: 587
