--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 
 	//s3
 	implementation 'software.amazon.awssdk:s3:2.20.20' // AWS S3 SDK 의존성
-
+	implementation 'commons-codec:commons-codec:1.15'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
