--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ dependencies {
 
 	implementation 'io.micrometer:micrometer-registry-prometheus' //프로메테우스
 
+	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.16.0'
+	implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring:5.16.0'
 
 }
 
