--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,12 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'org.springframework.boot:spring-boot-starter-batch' // 배치
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator' //
+
+	implementation 'io.micrometer:micrometer-registry-prometheus' //프로메테우스
+
+
 }
 
 def querydslDir = file("$buildDir/generated/querydsl")
