--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,11 @@ springdoc:
     path: index.html # Swagger UI 경로 => localhost:8000/demo-ui.html
   tags-sorter: alpha # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬*
   operations-sorter: alpha # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬*
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health, info
+  metrics:
+    tags:
+      application: ${spring.application.name}
