refactor: 데일리 질문 할당 로직 리팩토링 및 배치 적용 #170 (#174)
* refactor: 데일리 질문 할당 배치 적용

* refactor: 데일리 질문 할당 기존 로직 삭제

* refactor: logger 수정

* refactor: shedlock 적용

* refactor: shedlock 의존성 추가 및 설정 변경

* feat: 배치 반복 실행 방어 로직 추가

* refactor: 운영 환경 배포시 안정성을 위한 ddl auto 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -32,6 +32,11 @@ spring:
       host: ${REDIS_HOST}
       password: ${REDIS_PASSWORD}
       connect-timeout: 2s
+  batch:
+    jdbc:
+      initialize-schema: never
+  aop:
+    proxy-target-class: true
 oauth:
   kakao:
     client-id: ${KAKAO_REST_API_KEY}
