--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -32,6 +32,11 @@ spring:
       host: ${REDIS_HOST}
       password: ${REDIS_PASSWORD}
       connect-timeout: 2s
+  batch:
+    jdbc:
+      initialize-schema: never
+  aop:
+    proxy-target-class: true
 oauth:
   kakao:
     client-id: ${KAKAO_REST_API_KEY}
@@ -60,3 +65,11 @@ springdoc:
     path: index.html # Swagger UI 경로 => localhost:8000/demo-ui.html
   tags-sorter: alpha # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬*
   operations-sorter: alpha # alpha: 알파벳 순 태그 정렬, method: HTTP Method 순 정렬*
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health, info
+  metrics:
+    tags:
+      application: ${spring.application.name}
